[gd_scene load_steps=9 format=3 uid="uid://cu86oqvnyvknu"]

[ext_resource type="Script" path="res://scripts/minigame_result_ui.gd" id="1_5u8g0"]
[ext_resource type="FontFile" uid="uid://cm8dnumwsttrn" path="res://assets/fonts/Silkscreen/slkscr.ttf" id="2_3ppi0"]
[ext_resource type="FontFile" uid="uid://whx2uoxvf88o" path="res://assets/fonts/Silkscreen/slkscrb.ttf" id="3_30yna"]
[ext_resource type="PackedScene" uid="uid://c2iafl58bub3k" path="res://scenes/platforming_player.tscn" id="4_mi0q4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktq8o"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hj0qw"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3ihw"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sl37m"]
bg_color = Color(0, 0, 0, 1)

[node name="MinigameResultUI" type="ColorRect" node_paths=PackedStringArray("stagger_list")]
custom_minimum_size = Vector2(1152, 648)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5u8g0")
stagger_list = [NodePath("MarginContainer/Panel/VBoxContainer/Difficulty"), NodePath("MarginContainer/Panel/VBoxContainer/Wager"), NodePath("MarginContainer/Panel/VBoxContainer/Payout"), NodePath("MarginContainer/Panel/VBoxContainer2/OldBalance"), NodePath("MarginContainer/Panel/VBoxContainer2/Increment"), NodePath("MarginContainer/Panel/VBoxContainer2/Balance"), NodePath("Player")]

[node name="Result" type="Label" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 22.0
offset_right = 1122.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3ppi0")
theme_override_font_sizes/font_size = 48
text = "Result"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 65
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ktq8o")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = -1
offset_left = 50.0
offset_top = 50.0
offset_right = 584.0
offset_bottom = 159.0
theme_override_constants/separation = 30

[node name="Difficulty" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="SelectedDifficulty" type="Label" parent="MarginContainer/Panel/VBoxContainer/Difficulty"]
custom_minimum_size = Vector2(244, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "Difficulty:"

[node name="Panel" type="Panel" parent="MarginContainer/Panel/VBoxContainer/Difficulty"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hj0qw")

[node name="SelectedDifficultyValue" type="Label" parent="MarginContainer/Panel/VBoxContainer/Difficulty/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "Easy"

[node name="Wager" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Wager" type="Label" parent="MarginContainer/Panel/VBoxContainer/Wager"]
custom_minimum_size = Vector2(244, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "Wager:"
horizontal_alignment = 2

[node name="Panel" type="Panel" parent="MarginContainer/Panel/VBoxContainer/Wager"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hj0qw")

[node name="WagerAmount" type="Label" parent="MarginContainer/Panel/VBoxContainer/Wager/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "$1000000"

[node name="Payout" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Payout" type="Label" parent="MarginContainer/Panel/VBoxContainer/Payout"]
custom_minimum_size = Vector2(244, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "Payout:"
horizontal_alignment = 2

[node name="Panel" type="Panel" parent="MarginContainer/Panel/VBoxContainer/Payout"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hj0qw")

[node name="PayoutAmount" type="Label" parent="MarginContainer/Panel/VBoxContainer/Payout/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "$2000000"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel"]
custom_minimum_size = Vector2(0, 159)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -159.0
offset_right = 584.0
offset_bottom = -50.0
grow_vertical = 0
theme_override_constants/separation = 30

[node name="OldBalance" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="OldBalance" type="Label" parent="MarginContainer/Panel/VBoxContainer2/OldBalance"]
custom_minimum_size = Vector2(244, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 2

[node name="Panel" type="Panel" parent="MarginContainer/Panel/VBoxContainer2/OldBalance"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hj0qw")

[node name="OldBalanceAmount" type="Label" parent="MarginContainer/Panel/VBoxContainer2/OldBalance/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "$2000000"

[node name="Increment" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Increment" type="Label" parent="MarginContainer/Panel/VBoxContainer2/Increment"]
unique_name_in_owner = true
custom_minimum_size = Vector2(244, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "+"
horizontal_alignment = 2

[node name="Panel" type="Panel" parent="MarginContainer/Panel/VBoxContainer2/Increment"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hj0qw")

[node name="IncrementAmount" type="Label" parent="MarginContainer/Panel/VBoxContainer2/Increment/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "$2000000"

[node name="Balance" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Balance" type="Label" parent="MarginContainer/Panel/VBoxContainer2/Balance"]
custom_minimum_size = Vector2(244, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "Balance:"
horizontal_alignment = 2

[node name="Panel" type="Panel" parent="MarginContainer/Panel/VBoxContainer2/Balance"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hj0qw")

[node name="BalanceAmount" type="Label" parent="MarginContainer/Panel/VBoxContainer2/Balance/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
text = "$1000000"

[node name="DoneButtonPanel" type="Panel" parent="MarginContainer/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(161, 45)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = -46.0
offset_bottom = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_j3ihw")

[node name="DoneButton" type="Button" parent="MarginContainer/Panel/DoneButtonPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -20.5
offset_right = 78.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_30yna")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_sl37m")
text = "NICE!"

[node name="Player" parent="." instance=ExtResource("4_mi0q4")]
position = Vector2(816, 358)
scale = Vector2(10, 10)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
